tests/baselines/reference/nodeModulesTripleSlashReferenceModeOverrideModeError(module=node18).errors.txt
error TS5109: Option 'moduleResolution' must be set to 'Node18' (or left unspecified) when option 'module' is set to 'Node18'.
/index.ts(1,23): error TS1453: `resolution-mode` should be either `require` or `import`.
/index.ts(1,23): error TS2688: Cannot find type definition file for 'pkg'.
/index.ts(2,1): error TS2304: Cannot find name 'foo'.
/index.ts(3,1): error TS2304: Cannot find name 'bar'.


!!! error TS5109: Option 'moduleResolution' must be set to 'Node18' (or left unspecified) when option 'module' is set to 'Node18'.
==== /index.ts (4 errors) ====
    /// <reference types="pkg" resolution-mode="esm"/>
                          ~~~
!!! error TS1453: `resolution-mode` should be either `require` or `import`.
                          ~~~
!!! error TS2688: Cannot find type definition file for 'pkg'.
    foo; // bad resolution mode, which resolves is arbitrary
    ~~~
!!! error TS2304: Cannot find name 'foo'.
    bar;
    ~~~
!!! error TS2304: Cannot find name 'bar'.
    export {};
==== /node_modules/pkg/package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "0.0.1",
        "exports": {
            "import": "./import.js",
            "require": "./require.js"
        }
    }
==== /node_modules/pkg/import.d.ts (0 errors) ====
    export {};
    declare global {
        var foo: number;
    }
==== /node_modules/pkg/require.d.ts (0 errors) ====
    export {};
    declare global {
        var bar: number;
    }